# raytracing-in-one-weekend.ml

./: .gitignore  LICENSE  Makefile  README.md  dune-project  raytracing-in-one-weekend.opam
lib/: color.ml  color.mli  dune  hitRecord.ml  hitRecord.mli  hittable.ml  hittable.mli  hittableList.ml  hittableList.mli  interval.ml  interval.mli  point.ml  point.mli  ray.ml  ray.mli  sphere.ml  sphere.mli  util.ml  util.mli  vec3.ml  vec3.mli
test/: dune  test_color.ml  test_hittable_list.ml  test_interval.ml  test_point.ml  test_ray.ml  test_sphere.ml  test_util.ml  test_vec3.ml  testables.ml
