(lang dune 3.4)

(name raytracing-in-one-weekend)

(source
  (github vshender/raytracing-in-one-weekend.ml))
(homepage "https://github.com/vshender/raytracing-in-one-weekend.ml")

(authors "Vadzim Shender <vadzim@shender.org>")
(maintainers "Vadzim Shender <vadzim@shender.org>")

(license "ISC")

(generate_opam_files false)
