(test
 (name test_vec3)
 (modules test_vec3 testables)
 (libraries alcotest raytracing_in_one_weekend)
 (package raytracing-in-one-weekend))

(test
 (name test_point)
 (modules test_point testables)
 (libraries alcotest raytracing_in_one_weekend)
 (package raytracing-in-one-weekend))

(test
 (name test_color)
 (modules test_color testables)
 (libraries alcotest raytracing_in_one_weekend)
 (package raytracing-in-one-weekend))

(test
 (name test_ray)
 (modules test_ray testables)
 (libraries alcotest raytracing_in_one_weekend)
 (package raytracing-in-one-weekend))

(test
 (name test_sphere)
 (modules test_sphere testables)
 (libraries alcotest raytracing_in_one_weekend)
 (package raytracing-in-one-weekend))

(test
 (name test_hittable_list)
 (modules test_hittable_list testables)
 (libraries alcotest raytracing_in_one_weekend)
 (package raytracing-in-one-weekend))

(test
 (name test_interval)
 (modules test_interval testables)
 (libraries alcotest raytracing_in_one_weekend)
 (package raytracing-in-one-weekend))

(test
 (name test_util)
 (modules test_util testables)
 (libraries alcotest raytracing_in_one_weekend)
 (package raytracing-in-one-weekend))
